--- a/Front-end/JS-frameworks/Labs/Ads/Structure/app/templates/login.html
+++ b/Front-end/JS-frameworks/Labs/Ads/Structure/app/templates/login.html
@@ -1,4 +1,19 @@
 <div class="box">
     <h2>Login</h2>
-    TODO
+    <p>
+        <label>
+            Username:
+            <input type="text" id="username" ng-model="userData.username" required />
+        </label>
+    </p>
+    <p>
+        <label>
+            Password:
+            <input type="password" id="password" ng-model="userData.password" required />
+        </label>
+    </p>
+    <p>
+        <a ng-click="login(userData)" class="button">Login</a>
+        <a href="#/register" class="link">Register</a>
+    </p>
 </div>
