--- a/Front-end/JS-frameworks/Project/Issue-tracking-system/styles/app.css
+++ b/Front-end/JS-frameworks/Project/Issue-tracking-system/styles/app.css
@@ -10,3 +10,17 @@
 .accordion-toggle:focus {
     outline: none;
 }
+
+.form-control.ng-dirty.ng-valid-parse.ng-empty.ng-invalid {
+    border: 1px solid #ce8483;
+}
+.form-control.ng-dirty.ng-valid-parse.ng-empty.ng-invalid.ng-invalid-required:focus {
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 6px #ce8483;
+}
+
+.form-control.ng-dirty.ng-valid-parse.ng-touched.ng-not-empty.ng-valid.ng-valid-required {
+    border: 1px solid #67b168;
+}
+.form-control.ng-dirty.ng-valid-parse.ng-touched.ng-not-empty.ng-valid.ng-valid-required:focus {
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 6px #67b168;
+}
