--- a/Front-end/JS-frameworks/Project/Issue-tracking-system/views/templates/home.html
+++ b/Front-end/JS-frameworks/Project/Issue-tracking-system/views/templates/home.html
@@ -1,44 +1,2 @@
-<section class="col-md-8 col-md-offset-2" ng-controller="AccordionController">
-    <uib-accordion>
-        <uib-accordion-group uib-accordion-header is-open="status.isFirstOpen">
-            <uib-accordion-heading>
-                <div>Login</div>
-            </uib-accordion-heading>
-            <form name="registerForm">
-                <div class="input-group form-group">
-                    <span class="input-group-addon"><span class="glyphicon glyphicon-user"></span></span>
-                    <input type="text" class="form-control" placeholder="Username">
-                </div>
-                <div class="input-group form-group">
-                    <span class="input-group-addon"><span class="glyphicon glyphicon-lock"></span></span>
-                    <input type="text" class="form-control" placeholder="Password">
-                </div>
-                <div class="form-group">
-                    <button class="btn btn-default">Login</button>
-                </div>
-            </form>
-        </uib-accordion-group>
-        <uib-accordion-group panel-class="panel-primary">
-            <uib-accordion-heading>
-                <div>Register</div>
-            </uib-accordion-heading>
-            <form name="registerForm">
-                <div class="input-group form-group">
-                    <span class="input-group-addon"><span class="glyphicon glyphicon-user"></span></span>
-                    <input type="text" class="form-control" placeholder="Username">
-                </div>
-                <div class="input-group form-group">
-                    <span class="input-group-addon"><span class="glyphicon glyphicon-lock"></span></span>
-                    <input type="text" class="form-control" placeholder="Password">
-                </div>
-                <div class="input-group form-group">
-                    <span class="input-group-addon"><span class="glyphicon glyphicon-lock"></span></span>
-                    <input type="text" class="form-control" placeholder="Confirm Password">
-                </div>
-                <div class="form-group">
-                    <button class="btn btn-primary">Register</button>
-                </div>
-            </form>
-        </uib-accordion-group>
-    </uib-accordion>
-</section>
+<section ng-include="'views/partials/register-login.html'"></section>
+<section ng-include="'views/partials/dashboard.html'"></section>
