--- a/Front-end/JS-frameworks/Project/Issue-tracking-system/views/partials/dashboard.html
+++ b/Front-end/JS-frameworks/Project/Issue-tracking-system/views/partials/dashboard.html
@@ -1,8 +1,6 @@
-<div ng-controller="DashboardController">
-    <div ng-if="isAuthorized" class="row">
-        <div class="col-md-12">
-            <h2>Dashboard</h2>
-        </div>
+<div class="row">
+    <div class="col-md-12">
+        <h2>Dashboard</h2>
     </div>
 </div>
 
