--- a/Front-end/JS-frameworks/Project/Issue-tracking-system/views/partials/register-login.html
+++ b/Front-end/JS-frameworks/Project/Issue-tracking-system/views/partials/register-login.html
@@ -1,61 +1,60 @@
-<div ng-controller="UserController">
-    <div ng-if="!isAuthorized" class="col-md-8 col-md-offset-2">
-        <div ng-controller="AccordionController">
-            <uib-accordion>
-                <!-- Login -->
-                <uib-accordion-group uib-accordion-header is-open="status.isFirstOpen">
-                    <uib-accordion-heading>
-                        <div>Login</div>
-                    </uib-accordion-heading>
-                    <form name="loginForm">
-                        <div class="input-group form-group">
-                            <span class="input-group-addon"><span class="glyphicon glyphicon-user"></span></span>
-                            <input type="text" ng-model="loginData.username" class="form-control" placeholder="Username"
-                                   required="required">
-                        </div>
-                        <div class="input-group form-group">
-                            <span class="input-group-addon"><span class="glyphicon glyphicon-lock"></span></span>
-                            <input type="password" ng-model="loginData.password" class="form-control"
-                                   placeholder="Password" required="required">
-                        </div>
-                        <div class="form-group">
-                            <button class="btn btn-default" ng-click="login(loginData)"
-                                    ng-disabled="loginForm.$invalid">Login
-                            </button>
-                        </div>
-                    </form>
-                </uib-accordion-group>
-                <!-- Register -->
-                <uib-accordion-group panel-class="panel-primary">
-                    <uib-accordion-heading>
-                        <div>Register</div>
-                    </uib-accordion-heading>
-                    <form name="registerForm">
-                        <div class="input-group form-group">
-                            <span class="input-group-addon"><span class="glyphicon glyphicon-user"></span></span>
-                            <input type="text" ng-model="registerData.username" class="form-control"
-                                   placeholder="Username"
-                                   required="required">
-                        </div>
-                        <div class="input-group form-group">
-                            <span class="input-group-addon"><span class="glyphicon glyphicon-lock"></span></span>
-                            <input type="password" ng-model="registerData.password" class="form-control"
-                                   placeholder="Password" required="required">
-                        </div>
-                        <div class="input-group form-group">
-                            <span class="input-group-addon"><span class="glyphicon glyphicon-lock"></span></span>
-                            <input type="password" ng-model="registerData.confirmPassword" class="form-control"
-                                   placeholder="Confirm Password" required="required">
-                        </div>
-                        <div class="form-group">
-                            <button class="btn btn-primary" ng-click="register(registerData)"
-                                    ng-disabled="registerForm.$invalid">Register
-                            </button>
-                        </div>
-                    </form>
-                </uib-accordion-group>
-            </uib-accordion>
-        </div>
-    </div>
+<div class="col-md-8 col-md-offset-2" ng-controller="AccordionController">
+    <uib-accordion>
+        <uib-accordion-group uib-accordion-header is-open="status.isFirstOpen">
+            <uib-accordion-heading>
+                <div>Login</div>
+            </uib-accordion-heading>
+            <!-- Login Start -->
+            <form name="loginForm">
+                <div class="input-group form-group">
+                    <span class="input-group-addon"><span class="glyphicon glyphicon-user"></span></span>
+                    <input type="text" ng-model="loginData.username" class="form-control" placeholder="Username"
+                           required="required">
+                </div>
+                <div class="input-group form-group">
+                    <span class="input-group-addon"><span class="glyphicon glyphicon-lock"></span></span>
+                    <input type="password" ng-model="loginData.password" class="form-control"
+                           placeholder="Password" required="required">
+                </div>
+                <div class="form-group">
+                    <button class="btn btn-default" ng-click="login(loginData)"
+                            ng-disabled="loginForm.$invalid">Login
+                    </button>
+                </div>
+            </form>
+            <!-- Login End -->
+        </uib-accordion-group>
+        <uib-accordion-group panel-class="panel-primary">
+            <uib-accordion-heading>
+                <div>Register</div>
+            </uib-accordion-heading>
+            <!-- Register Start -->
+            <form name="registerForm">
+                <div class="input-group form-group">
+                    <span class="input-group-addon"><span class="glyphicon glyphicon-user"></span></span>
+                    <input type="text" ng-model="registerData.username" class="form-control register"
+                           placeholder="Username"
+                           required="required">
+                </div>
+                <div class="input-group form-group">
+                    <span class="input-group-addon"><span class="glyphicon glyphicon-lock"></span></span>
+                    <input type="password" minlength="6" ng-model="registerData.password" class="form-control register"
+                           placeholder="Password" required="required">
+                </div>
+                <div class="input-group form-group">
+                    <span class="input-group-addon"><span class="glyphicon glyphicon-lock"></span></span>
+                    <input type="password" minlength="6" ng-model="registerData.confirmPassword"
+                           class="form-control register"
+                           placeholder="Confirm Password" required="required">
+                </div>
+                <div class="form-group">
+                    <button class="btn btn-primary" ng-click="register(registerData)"
+                            ng-disabled="registerForm.$invalid">Register
+                    </button>
+                </div>
+            </form>
+            <!-- Register End -->
+        </uib-accordion-group>
+    </uib-accordion>
 </div>
 
