--- a/Front-end/JS-frameworks/Project/Issue-tracking-system/views/partials/register-login.html
+++ b/Front-end/JS-frameworks/Project/Issue-tracking-system/views/partials/register-login.html
@@ -47,6 +47,11 @@
                            class="form-control register"
                            placeholder="Confirm Password" required="required">
                 </div>
+                <div class="input-group form-group">
+                    <span class="input-group-addon"><span class="glyphicon glyphicon-envelope"></span></span>
+                    <input type="email" ng-model="registerData.email" class="form-control register" placeholder="E-mail"
+                           required="required">
+                </div>
                 <div class="form-group">
                     <button class="btn btn-primary" ng-click="register(registerData)"
                             ng-disabled="registerForm.$invalid">Register
