--- a/Front-end/JS-frameworks/Project/Issue-tracking-system/styles/app.css
+++ b/Front-end/JS-frameworks/Project/Issue-tracking-system/styles/app.css
@@ -11,19 +11,32 @@
     outline: none;
 }
 
-.register.form-control.ng-dirty.ng-valid-parse.ng-empty.ng-invalid {
+.form-control.register.ng-dirty.ng-valid-parse.ng-touched.ng-not-empty.ng-valid.ng-valid-required,
+.form-control.register.ng-valid-required.ng-not-empty.ng-dirty.ng-valid-parse.ng-valid.ng-valid-pattern.ng-untouched,
+.form-control.register.ng-dirty.ng-valid-parse.ng-touched.ng-not-empty.ng-valid-required.ng-valid.ng-valid-confirm-password {
+    border: 1px solid #67b168;
+}
+
+.form-control.register.ng-dirty.ng-valid-parse.ng-touched.ng-not-empty.ng-valid.ng-valid-required:focus,
+.form-control.register.ng-valid-required.ng-not-empty.ng-dirty.ng-valid-parse.ng-valid.ng-valid-pattern.ng-untouched:focus,
+.form-control.register.ng-dirty.ng-valid-parse.ng-touched.ng-not-empty.ng-valid-required.ng-valid.ng-valid-confirm-password:focus {
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 6px #67b168;
+}
+
+.form-control.register.ng-not-empty.ng-dirty.ng-valid-parse.ng-valid-required.ng-invalid.ng-invalid-minlength.ng-touched,
+.form-control.register.ng-not-empty.ng-dirty.ng-valid-required.ng-invalid.ng-invalid-pattern.ng-touched,
+.form-control.register.ng-not-empty.ng-dirty.ng-valid-parse.ng-valid-required.ng-touched.ng-invalid.ng-invalid-confirm-password.ng-valid-minlength {
     border: 1px solid #ce8483;
 }
-.register.form-control.ng-dirty.ng-valid-parse.ng-empty.ng-invalid.ng-invalid-required:focus {
+
+.form-control.register.ng-not-empty.ng-dirty.ng-valid-parse.ng-valid-required.ng-invalid.ng-invalid-minlength.ng-touched:focus,
+.form-control.register.ng-not-empty.ng-dirty.ng-valid-required.ng-invalid.ng-invalid-pattern.ng-touched:focus,
+.form-control.register.ng-not-empty.ng-dirty.ng-valid-parse.ng-valid-required.ng-touched.ng-invalid.ng-invalid-confirm-password.ng-valid-minlength:focus{
     box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 6px #ce8483;
 }
 
-.register.form-control.ng-dirty.ng-valid-parse.ng-touched.ng-not-empty.ng-valid.ng-valid-required {
-    border: 1px solid #67b168;
-}
-.register.form-control.ng-dirty.ng-valid-parse.ng-touched.ng-not-empty.ng-valid.ng-valid-required:focus {
-    box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 6px #67b168;
-}
+
+
 #loading-bar .bar,
 #loading-bar-spinner .spinner-icon {
     margin-top: 50px;
