app.css change load-bar height

--- a/Front-end/JS-frameworks/Project/Issue-tracking-system/styles/app.css
+++ b/Front-end/JS-frameworks/Project/Issue-tracking-system/styles/app.css
@@ -35,9 +35,6 @@
     box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 6px #ce8483;
 }
 
-
-
-#loading-bar .bar,
-#loading-bar-spinner .spinner-icon {
-    margin-top: 50px;
+#loading-bar .bar {
+    height: 3px;
 }
