add change password form

--- a/Front-end/JS-frameworks/Project/Issue-tracking-system/views/templates/user/change-password.html
+++ b/Front-end/JS-frameworks/Project/Issue-tracking-system/views/templates/user/change-password.html
@@ -1,1 +1,27 @@
-<h2>Change Password</h2>
+<form class="form-horizontal">
+    <h2>Change Password</h2>
+    <div class="form-group">
+        <label for="old-password" class="control-label col-md-3">Old Password</label>
+        <div class="col-md-6">
+            <input type="password" id="old-password" class="form-control">
+        </div>
+
+    </div>
+    <div class="form-group">
+        <label for="new-password" class="control-label col-md-3">New Password</label>
+        <div class="col-md-6">
+            <input type="password" id="new-password" class="form-control">
+        </div>
+    </div>
+    <div class="form-group">
+        <label for="confirm-new-password" class="control-label col-md-3">Confirm New Password</label>
+        <div class="col-md-6">
+            <input type="password" id="confirm-new-password" class="form-control">
+        </div>
+    </div>
+    <div class="form-group">
+        <div class="col-md-3">
+            <button class="btn btn-primary">Change Password</button>
+        </div>
+    </div>
+</form>
