--- a/Front-end/JS-frameworks/Project/Issue-tracking-system/views/templates/user/change-password.html
+++ b/Front-end/JS-frameworks/Project/Issue-tracking-system/views/templates/user/change-password.html
@@ -2,25 +2,24 @@
     <h2>Change Password</h2>
     <div class="form-group">
         <label for="old-password" class="control-label col-md-3">Old Password</label>
-        <div class="col-md-6">
-            <input type="password" id="old-password" class="form-control">
+        <div class="col-md-9">
+            <input type="password" id="old-password" class="form-control" placeholder="Old Password">
         </div>
-
     </div>
     <div class="form-group">
         <label for="new-password" class="control-label col-md-3">New Password</label>
-        <div class="col-md-6">
-            <input type="password" id="new-password" class="form-control">
+        <div class="col-md-9">
+            <input type="password" id="new-password" class="form-control" placeholder="New Password">
         </div>
     </div>
     <div class="form-group">
         <label for="confirm-new-password" class="control-label col-md-3">Confirm New Password</label>
-        <div class="col-md-6">
-            <input type="password" id="confirm-new-password" class="form-control">
+        <div class="col-md-9">
+            <input type="password" id="confirm-new-password" class="form-control" placeholder="Confirm New Password">
         </div>
     </div>
     <div class="form-group">
-        <div class="col-md-3">
+        <div class="col-md-offset-3 col-md-9">
             <button class="btn btn-primary">Change Password</button>
         </div>
     </div>
