--- a/Front-end/JS-frameworks/Project/Issue-tracking-system/views/partials/dashboard.html
+++ b/Front-end/JS-frameworks/Project/Issue-tracking-system/views/partials/dashboard.html
@@ -1,6 +1,27 @@
 <div class="row">
     <div class="col-md-12">
         <h2>Dashboard</h2>
+        <table class="table">
+            <thead>
+            <tr>
+                <th>Issue</th>
+                <th>Project</th>
+                <th>Due Date</th>
+            </tr>
+            </thead>
+            <tbody ng-repeat="issue in myIssues">
+            <tr ng-class-even="'even'">
+                <td>{{issue.Title}}</td>
+                <td>{{issue.Project.Name}}</td>
+                <td>{{issue.DueDate | date}}</td>
+            </tr>
+            </tbody>
+
+        </table>
+    </div>
+    <div ng-if="isAdmin">
+        <button class="btn btn-success">Add New Project</button>
+        <a href="#/projects/1/add-issue" class="btn btn-success">Add New Issue</a>
     </div>
 </div>
 
