--- a/Front-end/JS-frameworks/Project/Issue-tracking-system/views/templates/home.html
+++ b/Front-end/JS-frameworks/Project/Issue-tracking-system/views/templates/home.html
@@ -1,6 +1,6 @@
-<section ng-if="!isAuthorized">
+<section ng-if="!isAuthenticated">
     <div ng-controller="UserController" ng-include="'views/partials/register-login.html'"></div>
 </section>
-<section ng-if="isAuthorized">
+<section ng-if="isAuthenticated">
     <div ng-controller="DashboardController" ng-include="'views/partials/dashboard.html'"></div>
 </section>
