--- a/Front-end/JS-frameworks/Project/Issue-tracking-system/views/templates/navbar.html
+++ b/Front-end/JS-frameworks/Project/Issue-tracking-system/views/templates/navbar.html
@@ -1,4 +1,4 @@
-<div class="navbar navbar-inverse">
+<div class="navbar navbar-inverse" ng-controller="HomeController">
     <div class="container">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
@@ -10,7 +10,7 @@
             </button>
             <a class="navbar-brand" href="#/">Issue Tracking System</a>
         </div>
-        <div class="collapse navbar-collapse" id="navbar">
+        <div class="collapse navbar-collapse" id="navbar" ng-if="isAuthenticated">
             <ul class="nav navbar-nav">
                 <li class="active"><a href="#/"><span class="glyphicon glyphicon-tasks"></span> Dashboard</a></li>
                 <li class="dropdown">
