--- a/Front-end/JS-frameworks/Project/Issue-tracking-system/views/partials/dashboard.html
+++ b/Front-end/JS-frameworks/Project/Issue-tracking-system/views/partials/dashboard.html
@@ -1,37 +1,46 @@
-<div class="row" >
+<div class="row">
     <div class="col-md-12">
         <h2>Dashboard</h2>
     </div>
-    <div class="col-md-6">
+    <div class="col-md-4">
         <h3>Assigned Projects</h3>
-        <div ng-repeat="issue in myIssues | unique:'issue'">
+        <div ng-repeat="issue in myIssues.Issues | unique:'issue'">
             <a ng-href="#/projects/{{issue.Project.Id}}">{{issue.Project.Name}}</a>
         </div>
     </div>
-    <div class="col-md-6">
+    <div class="col-md-8">
         <h3>Issues</h3>
         <table class="table">
             <thead>
             <tr>
                 <th>Issue</th>
+                <th>Description</th>
                 <th>Project</th>
                 <th>Due Date</th>
             </tr>
             </thead>
-            <tbody ng-repeat="issue in myIssues">
+            <tbody ng-repeat="issue in myIssues.Issues">
             <tr>
                 <td>{{issue.Title}}</td>
+                <td>{{issue.Description}}</td>
                 <td><a ng-href="#/projects/{{issue.Project.Id}}">{{issue.Project.Name}}</a></td>
                 <td>{{issue.DueDate | date}}</td>
             </tr>
             </tbody>
-
         </table>
+        <div>
+            <uib-pagination boundary-links="true" total-items="totalItems" ng-model="issuesParams.pageNumber"
+                            class="pagination-sm" items-per-page="issuesParams.pageSize" ng-change="reloadIssues()"
+                            previous-text="&lsaquo;" next-text="&rsaquo;" first-text="&laquo;" last-text="&raquo;">
+            </uib-pagination>
+        </div>
+
     </div>
-    <div ng-if="isAdmin">
+    <div ng-if="isAdmin" class="col-md-12">
         <button class="btn btn-success">Add New Project</button>
         <a href="#/projects/1/add-issue" class="btn btn-success">Add New Issue</a>
     </div>
+
 </div>
 
 
