--- a/Front-end/JS-frameworks/Project/Issue-tracking-system/views/templates/navbar.html
+++ b/Front-end/JS-frameworks/Project/Issue-tracking-system/views/templates/navbar.html
@@ -17,7 +17,7 @@
                 </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li class="dropdown" ng-class="{active: isActive('/profile/password') || isActive('/projects/1')}">
+                <li class="dropdown" ng-class="{active: isActive('/profile/password')}">
                     <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                         <span class="glyphicon glyphicon-user"></span> User<span class="caret"></span>
                     </a>
