--- a/Front-end/JS-frameworks/Project/Issue-tracking-system/views/templates/projects/project-by-id.html
+++ b/Front-end/JS-frameworks/Project/Issue-tracking-system/views/templates/projects/project-by-id.html
@@ -1,6 +1,64 @@
-<h2>By Id</h2>
 <div class="row">
-    <div class="col-md-6">
-        <div>{{projectById}}</div>
+    <div class="col-md-12">
+        <h3>Project
+            <span ng-controller="AdminController">
+                <span ng-show="isAdmin">
+                    <a href="#/projects/{{projectId}}/edit" class="btn btn-success btn-sm">Edit</a>
+                </span>
+            </span>
+        </h3>
+    </div>
+
+    <div class="col-md-12">
+        <p><span class="bold">Name: </span>{{project.Name}}</p>
+        <p><span class="bold">Key: </span>{{project.ProjectKey}}</p>
+        <p><span class="bold">Description: </span>{{project.Description}}</p>
+        <p><span class="bold">Leader: </span>{{project.Lead.Username}}</p>
+        <p><span class="bold">Leader ID: </span>{{project.Lead.Id}}</p>
+        <p><span class="bold">Labels: </span>
+            <span ng-repeat="label in project.Labels">
+                {{label.Name}}{{$last ? '': ', '}}
+            </span>
+        </p>
+        <p><span class="bold">Priorities: </span>
+            <span ng-repeat="priority in project.Priorities">
+                {{priority.Name}}{{$last ? '': ', '}}
+            </span>
+        </p>
+    </div>
+    <div ng-controller="NavbarController">
+        <div class="col-md-12" ng-show="isAdmin">
+
+
+        </div>
+    </div>
+    <div class="col-md-12">
+        <h3>Project Issues
+            <span ng-controller="AdminController">
+                <span ng-show="isAdmin">
+                    <a href="#/projects/{{projectId}}/add-issue" class="btn btn-success btn-sm">Add</a>
+                </span>
+            </span>
+        </h3>
+    </div>
+    <div class="col-md-12">
+        <table class="table table-hover">
+            <thead>
+            <tr>
+                <th>Issue</th>
+                <th>Description</th>
+                <th>Due Date</th>
+                <th>Assignee</th>
+            </tr>
+            </thead>
+            <tbody ng-repeat="issue in issues">
+            <tr>
+                <td><a ng-href="#/issues/{{issue.Id}}">{{issue.Title}}</a></td>
+                <td>{{issue.Description}}</td>
+                <td>{{issue.DueDate | date}}</td>
+                <td>{{issue.Assignee.Username}}</td>
+            </tr>
+            </tbody>
+        </table>
     </div>
 </div>
