--- a/Front-end/JS-frameworks/Project/Issue-tracking-system/views/partials/register-form.html
+++ b/Front-end/JS-frameworks/Project/Issue-tracking-system/views/partials/register-form.html
@@ -1,23 +1,35 @@
 <form name="registerForm">
     <div class="input-group form-group">
         <span class="input-group-addon"><span class="glyphicon glyphicon-envelope"></span></span>
-        <input type="text" ng-model="registerData.Email" ng-pattern="emailValidationRegex" class="form-control register"
-               placeholder="E-mail" required="required">
+        <input type="text" ng-model="registerData.Email" ng-pattern="emailValidationRegex"
+               class="form-control display-validation" placeholder="E-mail" required="required" name="email">
+    </div>
+    <div class="form-group error-message" ng-show="registerForm.email.$error.pattern && registerForm.email.$touched">
+        Invalid e-mail
     </div>
     <div class="input-group form-group">
         <span class="input-group-addon"><span class="glyphicon glyphicon-lock"></span></span>
-        <input type="password" minlength="6" maxlength="100" ng-model="registerData.Password"
-               class="form-control register" placeholder="Password" required="required">
+        <input type="password" minlength="6" maxlength="100" ng-model="registerData.Password" name="password"
+               class="form-control display-validation" placeholder="Password" required="required">
+    </div>
+    <div class="form-group error-message"
+         ng-show="(registerForm.password.$error.minlength || registerForm.password.$error.maxlength)
+            && registerForm.password.$touched">
+        Password length has to be between 6 and 100 symbols
     </div>
     <div class="input-group form-group">
         <span class="input-group-addon"><span class="glyphicon glyphicon-lock"></span></span>
         <input type="password" minlength="6" maxlength="100" ng-model="registerData.ConfirmPassword"
-               class="form-control register" placeholder="Confirm Password" required="required"
-               name="confirmPassword" confirm-password-validation="registerData.Password">
+               name="confirmPassword" class="form-control display-validation" placeholder="Confirm Password"
+               required="required" confirm-password-validation="registerData.Password">
+    </div>
+    <div class="form-group error-message"
+         ng-show="registerForm.confirmPassword.$error.confirmPasswordMatch && registerForm.confirmPassword.$touched">
+        'Confirm Password' and 'Password' has to match
     </div>
     <div class="form-group">
-        <button class="btn btn-primary" ng-click="register(registerData)"
-                ng-disabled="registerForm.$invalid">Register
+        <button class="btn btn-primary" ng-click="register(registerData)" ng-disabled="registerForm.$invalid">
+            Register
         </button>
     </div>
 </form>
