--- a/Front-end/JS-frameworks/Project/Issue-tracking-system/views/templates/navbar.html
+++ b/Front-end/JS-frameworks/Project/Issue-tracking-system/views/templates/navbar.html
@@ -1,4 +1,4 @@
-<div class="navbar navbar-inverse">
+<div class="navbar navbar-inverse" ng-controller="NavbarController">
     <div class="container">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
@@ -10,7 +10,7 @@
             </button>
             <a class="navbar-brand" href="#/">Issue Tracking System</a>
         </div>
-        <div class="collapse navbar-collapse" id="navbar" ng-controller="NavbarController">
+        <div class="collapse navbar-collapse" id="navbar" ng-if="authServices.isAuthenticated()">
             <ul class="nav navbar-nav">
                 <li ng-class="{active: isActive('/')}">
                     <a href="#/"><span class="glyphicon glyphicon-tasks"></span> Dashboard</a>
@@ -19,13 +19,13 @@
             <ul class="nav navbar-nav navbar-right">
                 <li class="dropdown" ng-class="{active: isActive('/profile/password')}">
                     <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-                        <span class="glyphicon glyphicon-user"></span> User<span class="caret"></span>
+                        <span class="glyphicon glyphicon-user"></span> Me ({{authServices.getCurrentUser()}})<span class="caret"></span>
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a href="#/logout"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
                         <li ng-class="{active: isActive('/profile/password')}">
                             <a href="#/profile/password"><span class="glyphicon glyphicon-lock"></span> Change Password</a>
                         </li>
+                        <li><a href="#/logout"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
                     </ul>
                 </li>
             </ul>
