--- a/Front-end/JS-frameworks/Project/Issue-tracking-system/views/templates/projects/edit.html
+++ b/Front-end/JS-frameworks/Project/Issue-tracking-system/views/templates/projects/edit.html
@@ -40,6 +40,7 @@
             <button class="btn btn-primary" ng-disabled="editProjectForm.$invalid"
                     ng-click="editProject(project, labels, priorities)">Edit
             </button>
+            <a ng-href="#/projects/{{projectId}}" class="btn btn-default">Cancel</a>
         </div>
     </div>
 </form>
