--- a/Front-end/JS-frameworks/Project/Issue-tracking-system/views/templates/projects/add-issue.html
+++ b/Front-end/JS-frameworks/Project/Issue-tracking-system/views/templates/projects/add-issue.html
@@ -54,22 +54,22 @@
             <input type="text" id="labels" class="form-control" ng-model="issueData.Labels" placeholder="Labels"
                    required="required">
         </div>
-        <div class="col-md-offset-3 col-md-6" ng-show="issueData.Labels.length > 0">
-            <span>
-                <span ng-repeat="project in projects">
-                    <span ng-if="$last">
-                        <span ng-repeat="label in project.Labels | filter:issueData.Labels">
-                            <span>{{label.Name}}{{$last ? '': ', '}}</span>
-                        </span>
-                    </span>
-                    <span ng-if="!$last">
-                        <span ng-repeat="label in project.Labels | filter:issueData.Labels">
-                            <span>{{label.Name}}, </span>
-                        </span>
-                    </span>
-                </span>
-            </span>
-        </div>
+        <!--<div class="col-md-offset-3 col-md-6" ng-show="issueData.Labels.length > 0">-->
+            <!--<span>-->
+                <!--<span ng-repeat="project in projects">-->
+                    <!--<span ng-if="$last">-->
+                        <!--<span ng-repeat="label in project.Labels | filter:issueData.Labels">-->
+                            <!--<span>{{label.Name}}{{$last ? '': ', '}}</span>-->
+                        <!--</span>-->
+                    <!--</span>-->
+                    <!--<span ng-if="!$last">-->
+                        <!--<span ng-repeat="label in project.Labels | filter:issueData.Labels">-->
+                            <!--<span>{{label.Name}}, </span>-->
+                        <!--</span>-->
+                    <!--</span>-->
+                <!--</span>-->
+            <!--</span>-->
+        <!--</div>-->
     </div>
     <div class="form-group">
         <label for="description" class="control-label col-md-3">Description</label>
@@ -80,7 +80,7 @@
     </div>
     <div class="form-group">
         <div class="col-md-offset-3 col-md-9">
-            <button class="btn btn-primary" ng-click="addIssue(issueData)" ng-disabled="issueAddForm.$invalid">
+            <button class="btn btn-primary" ng-click="addIssue(issueData)" >
                 Add Issue
             </button>
             <a ng-href="#/projects/{{projectId}}" class="btn btn-default">Cancel</a>
