--- a/Front-end/JS-frameworks/Project/Issue-tracking-system/views/templates/issues/edit.html
+++ b/Front-end/JS-frameworks/Project/Issue-tracking-system/views/templates/issues/edit.html
@@ -1,1 +1,60 @@
-<h2>Edit Issues</h2>
+<div ng-if="!isProjectLeader || !isAssignee">
+    <div>{{issuesServices.redirect()}}</div>
+</div>
+<div ng-if="isProjectLeader || isAssignee">
+    <form name="editIssueForm" class="form-horizontal">
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-9">
+                <h2>Edit Issue</h2>
+            </div>
+        </div>
+        <div class="form-group">
+            <label for="title" class="control-label col-md-3">Title</label>
+            <div class="col-md-6">
+                <input type="text" id="title" ng-model="issue.Title" class="form-control" required="required">
+            </div>
+        </div>
+        <div class="form-group">
+            <label for="description" class="control-label col-md-3">Description</label>
+            <div class="col-md-6">
+            <textarea id="description" ng-model="issue.Description" class="form-control" required="required">
+                {{issue.Description}}
+            </textarea>
+            </div>
+        </div>
+        <div class="form-group">
+            <label for="dueDate" class="control-label col-md-3">Due Date</label>
+            <div class="col-md-6">
+                <input type="datetime" id="dueDate" ng-model="issue.DueDate" class="form-control" required="required">
+            </div>
+        </div>
+        <div class="form-group">
+            <label for="assigneeId" class="control-label col-md-3">Assignee Id</label>
+            <div class="col-md-6">
+                <input type="text" id="assigneeId" ng-model="issue.Assignee.Id" class="form-control"
+                       required="required">
+            </div>
+        </div>
+        <div class="form-group">
+            <label for="priorityId" class="control-label col-md-3">Priority Id</label>
+            <div class="col-md-6">
+                <input type="text" id="priorityId" ng-model="issue.Priority.Id" class="form-control"
+                       required="required">
+            </div>
+        </div>
+        <div class="form-group">
+            <label for="labels" class="control-label col-md-3">Labels</label>
+            <div class="col-md-6">
+                <input type="text" id="labels" ng-model="issueLabels" class="form-control" required="required">
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="col-md-9 col-md-offset-3">
+                <button class="btn btn-primary" ng-disabled="editIssueForm.$invalid"
+                        ng-click="editIssue(issue, issueLabels)">Edit
+                </button>
+                <a ng-href="#/issues/{{issueId}}" class="btn btn-default">Cancel</a>
+            </div>
+        </div>
+    </form>
+</div>
