--- a/Front-end/JS-frameworks/Project/Issue-tracking-system/views/templates/projects/edit.html
+++ b/Front-end/JS-frameworks/Project/Issue-tracking-system/views/templates/projects/edit.html
@@ -13,8 +13,9 @@
     <div class="form-group">
         <label for="description" class="control-label col-md-3">Description</label>
         <div class="col-md-6">
-            <textarea id="description" ng-model="project.Description"
-                      class="form-control" required="required">{{project.Description}}</textarea>
+            <textarea id="description" ng-model="project.Description" class="form-control" required="required">
+                {{project.Description}}
+            </textarea>
         </div>
     </div>
     <div class="form-group">
